force-app/main/default/objects/vlocity_ins__ProviderFeeSchedule__c/fields/vlocity_ins__FeeScheduleId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FeeScheduleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Fee Schedule</label>
    <referenceTo>vlocity_ins__FeeSchedule__c</referenceTo>
    <relationshipLabel>Provider Fee Schedules</relationshipLabel>
    <relationshipName>ProviderFeeScheduleToFeeSchedule</relationshipName>
    <type>Lookup</type>
</CustomField>