force-app/main/default/objects/vlocity_ins__ProviderFeeSchedule__c/fields/vlocity_ins__ProviderAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProviderAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Provider</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Provider Fee Schedule</relationshipLabel>
    <relationshipName>ProviderFeeSchedule</relationshipName>
    <type>Lookup</type>
</CustomField>